[gd_scene load_steps=4 format=3 uid="uid://brro1cknoi5ad"]

[ext_resource type="Script" path="res://bullet.gd" id="1_mtbtu"]
[ext_resource type="Texture2D" uid="uid://bej20chqie4yd" path="res://WhiteSquare.png" id="2_wivvc"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ru2ut"]

[node name="Bullet" type="Area2D"]
modulate = Color(0.215686, 0.447059, 1, 1)
scale = Vector2(0.946062, 1.00387)
script = ExtResource("1_mtbtu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_ru2ut")

[node name="Sprite2D" type="Sprite2D" parent="."]
show_behind_parent = true
scale = Vector2(0.05, 0.05)
texture = ExtResource("2_wivvc")

[node name="Kill" type="Timer" parent="."]
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="area_shape_entered" from="." to="." method="_on_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Kill" to="." method="_on_kill_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
